--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+axum = "0.8.7"
+clap = { version = "4.5.53", features = ["derive"] }
+config = "0.15.19"
 reqwest = "0.12.24"
+serde = "1.0.228"
 tokio = { version = "1.48.0", features = ["full"] }
