--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["macros"] }
 chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 config = "0.15.19"
 reqwest = "0.12.24"
 serde = "1.0.228"
+serde_json = "1.0.145"
 slog = "2.8.2"
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
