--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ slog-scope-futures = "0.1.1"
 slog-term = "2.9.2"
 tokio = { version = "1.48.0", features = ["full"] }
 tokio-util = "0.7.17"
+uuid = { version = "1.19.0", features = ["v4"] }
