--- a/Cargo_BASE_47887.toml
+++ b/Cargo_BASE_47887.toml
@@ -6,12 +6,10 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 axum = { version = "0.8.7", features = ["macros"] }
-axum-server = { version = "0.7.3", features = ["tls-rustls"] }
 chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 config = "0.15.19"
-futures = "0.3.31"
-reqwest = { version = "0.12.24", features = ["json"] }
+reqwest = "0.12.24"
 serde = "1.0.228"
 serde_json = "1.0.145"
 slog = "2.8.2"
