fix setupt command

--- a/anon.example.yaml
+++ b/anon.example.yaml
@@ -5,6 +5,9 @@ auth:
 http:
   public_ip: 0.0.0.0
   port: 8080
+  tls:
+    cert: <path-to-cert-file>
+    key: <path-to-key-file>
 
 log:
   term: false
