--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 config = "0.15.19"
 futures = "0.3.31"
-reqwest = { version = "0.12.24", features = ["json"] }
+reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
 serde = "1.0.228"
 serde_json = "1.0.145"
 slog = "2.8.2"
