--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3.31"
 reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
 serde = "1.0.228"
 serde_json = "1.0.145"
-slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_warn"] }
+slog = { version = "2.8.2", features = ["max_level_trace"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-scope-futures = "0.1.1"
