--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.5.53", features = ["derive"] }
 config = "0.15.19"
 futures = "0.3.31"
 reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
+sd-notify = "0.4.5"
 serde = "1.0.228"
 serde_json = "1.0.145"
 slog = { version = "2.8.2", features = ["max_level_trace"] }
