--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
 sd-notify = "0.4.5"
 serde = "1.0.228"
 serde_json = "1.0.145"
+serde_with = "3.16.1"
 slog = { version = "2.8.2", features = ["max_level_trace"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
